# forumbuddy

./: .gitignore  README.md  TODO  docker-compose.dev.yml  go.mod  go.sum  main.go  mockdata.sql  routes.txt  schema.sql
db_data/: mockdata.sql  schema.sql
forumbuddy/: pyproject.toml
forumbuddy/forumbuddy/: __main__.py  db.py  models.py
go/: db.go  go.mod  go.sum  main.go
go/models/: models.go
go/routes/: routes.go
go/templates/: base.tmpl  comment.tmpl  header.tmpl  index.tmpl  login.tmpl  newpost.tmpl  post.tmpl  user.tmpl
models/: comment.go  models.go  models_test.go  post.go  user.go
python/: pyproject.toml
python/forumbuddy/: __init__.py  __main__.py  db.py  models.py  utils.py
python/templates/: index.html  login.html  post.html
repos/: comment.go  comment_sql.go  post.go  post_sql.go  user.go  user_sql.go
routes/: auth.go  comments.go  posts.go  routes.go  routes_test.go  users.go
rust/: Cargo.toml
rust/src/: main.rs
static/: style.css
templates/: 404.tmpl  500.tmpl  comment.tmpl  footer.tmpl  header.tmpl  index.tmpl  login.tmpl  newpost.tmpl  post.tmpl  signup.tmpl  user.tmpl
utils/: form.go  form_test.go
