[package]
name = "rust"
version = "0.1.0"
authors = ["maxcohn <maxc4321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "time" ] }
tokio = { version = "1.12.0", features = ["full"] }