[package]
name = "rust"
version = "0.1.0"
authors = ["maxcohn <maxc4321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
actix-web = "4.0.0-beta.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8.0"
anyhow = "1.0.44"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "postgres", "chrono" ] }
